# Navigate-SensorHub

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MIGRATION.md  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
boards/berrygps-imuv4/: Cargo.toml
boards/berrygps-imuv4/config/: buses.toml
boards/berrygps-imuv4/src/: lib.rs  main.rs
config/: buses.toml  sensors.toml
navigate-sensorhub/: Cargo.toml
navigate-sensorhub/proto/: sensorhub.proto
navigate-sensorhub/src/: bus.rs  config.rs  errors.rs  grpc_service.rs  hal.rs  lib.rs  sensors.rs
navigate-sensorhub/src/bus/: mavlink.rs
navigate-sensorhub/src/sensors/: adapters.rs
navigate-sensorhub/src/sensors/adapters/: icm426xx.rs
scripts/: setup.sh
src/: bus.rs  config.rs  errors.rs  grpc_service.rs  lib.rs  main.rs  messages.rs  registry.rs  scheduler.rs  sensors.rs
src/bus/: i2c.rs  mavlink.rs  mod.rs  serial.rs
src/config/: bus_config.rs  sensor_config.rs
src/sensors/: bmp388.rs  icm42688p.rs  lis3mdl.rs  lsm6dsl.rs  mavlink.rs  mavlink_baro.rs  mavlink_imu.rs  mavlink_mag.rs  mod.rs
